# pairs-trading-ggr

./: .gitignore  README.md  pyproject.toml
src/analysis/: cost_sweep.py  deflated_sharpe.py  significance.py  strategy_cost_comparison.py  subperiod.py
src/backtest/: cointegration.py  engine.py  engine_cached.py  engine_coint.py  formation.py  returns.py  trading.py
src/dash/: app.py
src/data/: build_membership.py  build_panel.py  clean_panel.py  fetch_constituents.py  fetch_prices.py
